--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         var bear;
         var bees;
         var updateTimer;
+        var lastStingTime;
     </script>
 </head>
 <body onload="start();">
@@ -40,7 +41,7 @@
                     <p>Stings: [<span id="hits">0</span>]</p>
                 </td>
                 <td>
-                    <p>Best duration: [<span id="duration">?</span>]</p>
+                    <p>Best duration: [<span id="duration">0</span>]</p>
                 </td>
             </tr>
         </table>
