--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="title">
         <h1>Help the bear escape the bees !</h1>
         <p>
-            Bear tries to avoid being stung by <input type="text" id="nbBees" value="1" size="3"> bees by running and jumping. The objective is to have as less stings as possible!
+            Bear tries to avoid being stung by <input type="text" id="nbBees" value="1" size="3" onchange="makeBees()"> bees by running and jumping. The objective is to have as less stings as possible!
         </p>
         <p>
             You can ajust bees' speed <input type="text" id="speedBees" value="50" size="3"> px/ms
@@ -32,7 +32,7 @@
             <input type="text" id="bearSpeed" value="100">
         </p>
         <h2>Press left, right, up, down keys to move the bear</h2>
-
+        <button id="addBtn" onclick="addBee()">Click to Add a Bee</button>
     </div>
     <div id="scores">
         <table>
