--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
             Enter the speed of the bear
             <input type="text" id="bearSpeed" value="100">
         </p>
-        <h2>Press left, right, up, down keys to move the bear</h2>
         <button id="addBtn" onclick="addBee()">Click to Add a Bee</button>
+        <h2>Press left, right, up, down keys to move the bear</h2>
+        
     </div>
     <div id="scores">
         <table>
@@ -41,7 +42,7 @@
                     <p>Stings: [<span id="hits">0</span>]</p>
                 </td>
                 <td>
-                    <p>Best duration: [<span id="duration">0</span>]</p>
+                    <p>Best duration: [<span id="duration">0</span>] ms</p>
                 </td>
             </tr>
         </table>
